--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt-ts build",
-    "start": "nuxt-ts start",
-    "serve": "nuxt-ts serve"
+    "start": "nuxt-ts start"
   },
   "dependencies": {
+    "@nuxt/types": "^2.13.3",
+    "@nuxt/typescript-build": "^2.0.0",
     "@nuxt/typescript-runtime": "^0.4.10",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/proxy": "^2.0.1",
@@ -15,12 +16,9 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "nuxt": "^2.13.0",
+    "ts-loader": "^8.0.1",
     "vue": "^2.6.11",
     "vue2-animate": "^2.1.3",
     "vuex-module-decorators": "^0.17.0"
-  },
-  "devDependencies": {
-    "@nuxt/types": "^2.13.3",
-    "@nuxt/typescript-build": "^2.0.0"
   }
 }
