--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "@nuxt/typescript-runtime": "^0.4.10",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/proxy": "^2.0.1",
+    "@types/sockjs-client": "^1.1.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.15.0",
     "nuxt": "^2.13.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "sockjs-client": "^1.4.0",
     "ts-loader": "^8.0.1",
     "vue": "^2.6.11",
     "vue2-animate": "^2.1.3",
-    "vuex-module-decorators": "^0.17.0"
+    "vuex-module-decorators": "^0.17.0",
+    "webstomp-client": "^1.2.6"
   }
 }
