--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "vue2-animate": "^2.1.3",
     "vuex-module-decorators": "^0.17.0",
     "webstomp-client": "^1.2.6"
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
