--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,9 @@
     "types": [
       "@types/node",
       "@nuxt/types",
-      "bootstrap-vue/esm"
+      "vue/types",
+      "bootstrap-vue/esm",
+      "@nuxtjs/axios/types"
     ]
   },
   "exclude": [
