--- a/package.json
+++ b/package.json
@@ -2,14 +2,12 @@
   "name": "website-jiuqi-frontend",
   "private": true,
   "scripts": {
-    "dev": "nuxt",
+    "dev": "nuxt-ts",
     "build": "nuxt-ts build",
     "start": "nuxt-ts start",
-    "deploy": "heroku container:push web -a chessterm && heroku container:release web -a chessterm"
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "@nuxt/types": "^2.13.3",
-    "@nuxt/typescript-build": "^2.0.0",
     "@nuxt/typescript-runtime": "^0.4.10",
     "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/color-mode": "^1.0.2",
@@ -20,14 +18,23 @@
     "bootstrap-vue": "^2.16.0",
     "bootswatch": "^4.5.0",
     "nuxt": "^2.13.0",
-    "sass": "^1.26.10",
-    "sass-loader": "^9.0.2",
     "sockjs-client": "^1.4.0",
-    "ts-loader": "^8.0.1",
     "vue": "^2.6.11",
     "vue2-animate": "^2.1.3",
     "vuex-module-decorators": "^0.17.0",
     "webstomp-client": "^1.2.6"
+  },
+  "devDependencies": {
+    "@nuxt/types": "^2.13.3",
+    "@nuxt/typescript-build": "^2.0.0",
+    "@nuxtjs/eslint-config-typescript": "^3.0.0",
+    "@nuxtjs/eslint-module": "^2.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.5.0",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "sass": "^1.26.10",
+    "sass-loader": "^9.0.2",
+    "ts-loader": "^8.0.1"
   },
   "engines": {
     "node": "12.x"
