--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/nuxt,yarn,node,nuxtjs,windows,phpstorm+all
-# Edit at https://www.toptal.com/developers/gitignore?templates=nuxt,yarn,node,nuxtjs,windows,phpstorm+all
+# Created by https://www.toptal.com/developers/gitignore/api/yarn,node,nuxtjs,windows,phpstorm+all,visualstudiocode
+# Edit at https://www.toptal.com/developers/gitignore?templates=yarn,node,nuxt,nuxtjs,windows,phpstorm+all,visualstudiocode
 
 ### Node ###
 # Logs
@@ -111,98 +111,12 @@ dist
 # Stores VSCode versions used for testing VSCode extensions
 .vscode-test
 
-### Nuxt ###
-# gitignore template for Nuxt.js projects
-#
-# Recommended template: Node.gitignore
-
-# Nuxt build
-
- # Nuxt generate
-
 ### Nuxtjs ###
 # dependencies
 node_modules
 
 # logs
 npm-debug.log
-
-# Nuxt build
-
-# Nuxt generate
-
-### PhpStorm+all ###
-# Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
-# Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
-
-# User-specific stuff
-.idea/**/workspace.xml
-.idea/**/tasks.xml
-.idea/**/usage.statistics.xml
-.idea/**/dictionaries
-.idea/**/shelf
-
-# Generated files
-.idea/**/contentModel.xml
-
-# Sensitive or high-churn files
-.idea/**/dataSources/
-.idea/**/dataSources.ids
-.idea/**/dataSources.local.xml
-.idea/**/sqlDataSources.xml
-.idea/**/dynamic.xml
-.idea/**/uiDesigner.xml
-.idea/**/dbnavigator.xml
-
-# Gradle
-.idea/**/gradle.xml
-.idea/**/libraries
-
-# Gradle and Maven with auto-import
-# When using Gradle or Maven with auto-import, you should exclude module files,
-# since they will be recreated, and may cause churn.  Uncomment if using
-# auto-import.
-# .idea/artifacts
-# .idea/compiler.xml
-# .idea/jarRepositories.xml
-# .idea/modules.xml
-# .idea/*.iml
-# .idea/modules
-# *.iml
-# *.ipr
-
-# CMake
-cmake-build-*/
-
-# Mongo Explorer plugin
-.idea/**/mongoSettings.xml
-
-# File-based project format
-*.iws
-
-# IntelliJ
-out/
-
-# mpeltonen/sbt-idea plugin
-.idea_modules/
-
-# JIRA plugin
-atlassian-ide-plugin.xml
-
-# Cursive Clojure plugin
-.idea/replstate.xml
-
-# Crashlytics plugin (for Android Studio and IntelliJ)
-com_crashlytics_export_strings.xml
-crashlytics.properties
-crashlytics-build.properties
-fabric.properties
-
-# Editor-based Rest Client
-.idea/httpRequests
-
-# Android studio 3.1+ serialized cache file
-.idea/caches/build_file_checksums.ser
 
 ### PhpStorm+all Patch ###
 # Ignores the whole .idea folder and all .iml files
@@ -217,8 +131,17 @@ modules.xml
 .idea/misc.xml
 *.ipr
 
-# Sonarlint plugin
-.idea/sonarlint
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
+
+### VisualStudioCode Patch ###
+# Ignore all local history of files
+.history
 
 ### Windows ###
 # Windows thumbnail cache files
@@ -248,6 +171,7 @@ $RECYCLE.BIN/
 
 ### yarn ###
 # https://yarnpkg.com/advanced/qa#which-files-should-be-gitignored
+
 .yarn/*
 !.yarn/releases
 !.yarn/plugins
@@ -255,4 +179,4 @@ $RECYCLE.BIN/
 !.yarn/versions
 .pnp.*
 
-# End of https://www.toptal.com/developers/gitignore/api/nuxt,yarn,node,nuxtjs,windows,phpstorm+all
+# End of https://www.toptal.com/developers/gitignore/api/yarn,node,nuxt,nuxtjs,windows,phpstorm+all,visualstudiocode
