--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "website-jiuqi-frontend",
   "private": true,
+  "license": "GPL-3.0-or-later",
   "scripts": {
     "dev": "nuxt-ts",
     "build": "nuxt-ts build",
